--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
         <span class="box">50</span> -->
         <!-- <div>O número screto é maior <i class="fa-solid fa-arrow-up"></i> </div> -->
     </div>
-    <script src="JS/sorteio.js"></script>
-    <script src="JS/reconhecimentoVoz.js"></script>
-    <script src="JS/validacao.js"></script>
+    <script src="sorteio.js"></script>
+    <script src="reconhecimentoVoz.js"></script>
+    <script src="validacao.js"></script>
 </body>
 </html>
